# DopSCA_leakage

./: .gitignore  DopSCA.py  Doppler_spectrum.ipynb  README.md  beam_pattern.py  decorrelation_tester.ipynb  environment.yml  misc.py  pulse_pair_doppler.py  pulse_pair_doppler_class_demo.ipynb  pulse_pair_doppler_demo.ipynb  pyproject.toml  requirements.txt  surface_doppler.py  surface_generator.ipynb  todo.txt  velocity_variance.ipynb
.github/workflows/: main.yaml
Sentinel1_analyses/: ML_analyses_all.ipynb  ML_analysis_scatt.ipynb  add_dca.py  add_dca_sentinel1.ipynb  analysis_atmospheric_refraction.ipynb  analysis_attitude.ipynb  analysis_azimuthal_autocorr.ipynb  analysis_azimuthal_footprint_cutoff.ipynb  analysis_azimuthal_gradient_filtering.ipynb  analysis_footprint_filter.ipynb  analysis_leakage_velocity_spectra.ipynb  analysis_plots_PM1.ipynb  analysis_temporal_stack_land.ipynb  analysis_temporal_stack_ocean.ipynb  era5_download.py  load_dca.ipynb  process_sentinel1.ipynb  process_sentinel1_chain.ipynb  readme.txt  store_for_ML.ipynb  velocity_leakage.py
analyses/: analysis_aghulas_dca_east.py  analysis_aghulas_dca_east_no_speckle.py  analysis_system_design.py  example.ipynb
analyses/leakage/: ML_analyses_all.ipynb  add_dca_sentinel1.ipynb  analysis_TN1_TN2.ipynb  analysis_aghulas_dca.ipynb  analysis_aghulas_dca_east.ipynb  analysis_aghulas_dca_east_no_speckle.ipynb  analysis_analytical_leakage.ipynb  analysis_attitude.ipynb  (+12 more)
pulse_pair/: DopSCA.py  Doppler_spectrum.ipynb  pulse_pair_doppler.py  pulse_pair_doppler_class_demo.ipynb  pulse_pair_doppler_demo.py  surface_doppler.py  todo.txt  trash_doppler_dist.py  velocity_variance.ipynb
tests/: test_leakage.py
(+14 files in other folders)
