[project]
name = "dopsca"
version = "0.1.0"
authors = [
  { name="Owen O'D"},
]
description = "Python package for automated hyperparameter-optimization of common machine-learning algorithms"
readme = "README.md"
# requires-python = ">=3.11.0" #,<=3.12
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]


dependencies = [
  "xsar[S1]==2024.4.24",
  "dask==2024.4.1",
  "xarray==2024.3.0",
  "drama",
  "stereoid==0.4",
  "xrft==1.0.1",
  "numpy==1.26.4",
  "pandas",
  "scipy",
  "matplotlib",
  "pyproj",
  "bottleneck",
  "cmcrameri",
  "ipykernel",
  "joblib",
  "cdsapi"
]

[project.optional-dependencies]
test = ['pytest']
dev = ['black[jupyter]']


[project.urls]
Homepage = "https://github.com/owenodriscoll/DopSCA"
